--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,6 @@ android {
     viewBinding {
         enabled = true
     }
-    buildFeatures {
-        viewBinding true
-    }
     defaultConfig {
         // Enabling multidex support.
         multiDexEnabled true
@@ -65,23 +62,22 @@ kapt {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:17.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //support multidex
     implementation 'androidx.multidex:multidex:2.0.1'
-
 
     //Room
     def room_version = "2.4.1"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    //Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
 
     // design
@@ -115,28 +111,23 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.38.1"
 
     // work manager
-    implementation "androidx.work:work-runtime-ktx:2.7.1"
+    var work_manager_runtime_version = "2.7.1"
+    var work_manager_hilt_version = "1.0.0"
+    implementation "androidx.work:work-runtime-ktx:$work_manager_runtime_version"
+    implementation "androidx.work:work-runtime:$work_manager_runtime_version"
     implementation("androidx.startup:startup-runtime:1.1.0")
-    implementation("androidx.hilt:hilt-work:1.0.0")
-    kapt("androidx.hilt:hilt-compiler:1.0.0")
+    implementation("androidx.hilt:hilt-work:$work_manager_hilt_version")
+    kapt("androidx.hilt:hilt-compiler:$work_manager_hilt_version")
 
-    implementation "androidx.work:work-runtime:2.7.1"
-    implementation "androidx.work:work-runtime-ktx:2.7.1"
-
+    // camerax
     var camerax_version = "1.0.2"
-
-    // Use this dependency to bundle the model with your app
-    implementation 'com.google.mlkit:barcode-scanning:17.0.0'
-    // CameraX library
+    implementation 'com.google.mlkit:barcode-scanning:17.0.1'
     implementation("androidx.camera:camera-camera2:${camerax_version}")
-    // If you want to additionally use the CameraX Lifecycle library
     implementation("androidx.camera:camera-lifecycle:${camerax_version}")
-    // If you want to additionally use the CameraX View class
-    implementation("androidx.camera:camera-view:1.0.0-alpha30")
+    implementation("androidx.camera:camera-view:1.0.0-alpha32")
 
 
-// DataStore
+    // DataStore
     def dataStoreVersion = "1.1.1"
     implementation "androidx.preference:preference-ktx:$dataStoreVersion"
-//    implementation 'androidx.preference:preference-ktx:1.1.1'
 }
