adding unit test scan product viewmodel

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,12 @@ android {
 
     viewBinding {
         enabled = true
+
     }
     defaultConfig {
         // Enabling multidex support.
         multiDexEnabled true
+
     }
 
 }
@@ -57,8 +59,6 @@ kapt {
 kapt {
     correctErrorTypes true
 }
-
-
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -134,4 +134,23 @@ dependencies {
     // permissions
     implementation 'com.guolindev.permissionx:permissionx:1.5.0'
 
+    // testing
+//    testImplementation 'junit:junit:4.+'
+    //    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+
+//    implementation "androidx.test:core:1.2.0"
+    testImplementation "com.google.truth:truth:1.1.2"
+//    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    // for InstantTaskExecutorRule
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+//    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
+//    testImplementation "org.mockito:mockito-core:2.21.0"
+//    androidTestImplementation "com.google.truth:truth:1.1.2"
+
 }
+
+
